<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NativePaymentSample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="credit">Credit Cards</string>
    <string name="debit">Debit Cards</string>
    <string name="savedOps">Saved Options</string>
    <string name="netbanking">Netbanking</string>
    <string name="qrCode">QR Code Scanning</string>
    <string name="title_activity_credit_card">CreditCard</string>
    <string name="title_activity_debit_card">DebitCard</string>
    <string name="CardNumber">Card Number</string>
    <string name="MMYY">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="holderName">Card Holder\'s Name</string>
    <string name="pay">Pay</string>
    <string name="title_activity_net_banking">NetBanking</string>
    <string name="title_activity_saved_options">SavedOptions</string>
    <string name="title_activity_web3_dsecure">Web3DSecure</string>
    <string name="savedoptions">Pay Using</string>
    <string name="addOption">Add Option</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="mobilenum">Mobile</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_qrcode">QRCode</string>
    <string name="title_activity_main">Pay</string>
    <string name="title_activity_card_fragment">CardFragment</string>
    <string name="spinner">Choose a bank</string>
    <string name="checkbox">We save this option</string>
    <string name="guestFlow">Guest Flow</string>
    <string name="memberFlow">Member Flow</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="paymentOption">Payment Options</string>
    <string name="logout">Log out</string>

    <!--
<string-array name="netbanking">
    <item>ICICI Bank</item>
	<item>AXIS Bank</item>
	<item>YES Bank</item>
	<item>Deutsche Bank</item>
	<item>Union Bank</item>
	<item>IDBI Bank</item>
Federal Bank
State Bank of Hyderabad
State Bank of Bikaner and Jaipur
State Bank of Mysore
State Bank of Travancore
HDFC Bank
Citibank
SBI Bank
Indian Bank
Andhra Bank
Bank of Bahrain & Kuwait
Bank of Baroda Corporate Accounts
Bank of India
Bank of Baroda Retail Accounts
Bank of Maharashtra
Catholic Syrian Bank
Central Bank of India
City Union Bank
Corporation Bank
DCB Bank ( Development Credit Bank )
Indian Overseas Bank
IndusInd Bank
ING Vysya Bank
Jammu & Kashmir Bank
Karnataka Bank
Karur Vysya Bank
Kotak Mahindra Bank
Lakshmi Vilas Bank NetBanking
<item>Oriental Bank of Commerce</item>
<item>Punjab National Bank Corporate Accounts</item>
<item>South Indian Bank</item>
<item>Standard Chartered Bank</item>
<item>Syndicate Bank</item>
<item>Tamilnad Mercantile Bank</item>
<item>United Bank of India</item>
<item>Vijaya Bank</item>
<item>State Bank of Patiala</item>
<item>Punjab National Bank Retail Accounts</item>
</string-array>
    -->

    <string name="title_activity_guest_flow">GuestFlow</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_savepay_option">SavepayOption</string>
    <string name="title_activity_get_pay_options">GetPayOptions</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_guestflow">Guestflow</string>
    <string name="title_activity_options_available">OptionsAvailable</string>
    <string name="title_activity_contact_profile">ContactProfile</string>

</resources>