<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mActivity=".DemoActivity"
    android:orientation="vertical"
    android:gravity="center">

    <Button android:id="@+id/savedOptions"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:text="@string/savedOps"
        	android:layout_margin="10dp"/>
    
    <Button android:id="@+id/debitCard"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:text="@string/debit"
        	android:layout_margin="10dp"/>
    
    <Button android:id="@+id/creditCard"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:text="@string/credit"
        	android:layout_margin="10dp"/>
    
    <Button android:id="@+id/netBanking"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:text="@string/netbanking"
        	android:layout_margin="10dp"/>
    
    <Button android:id="@+id/qrCode" 
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:text="@string/qrCode"
        	android:layout_margin="10dp"/>
       

</LinearLayout>
