<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    
    
    <Button android:id="@+id/guestFlow"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:text="@string/guestFlow"
        	android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_margin="20dp"/>
    
    <Button android:id="@+id/memberFlow"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:text="@string/memberFlow"
        	android:layout_below="@+id/guestFlow"
        	android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_margin="20dp"/>

    <Button android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:layout_below="@+id/memberFlow"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"/>

</RelativeLayout>
