<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetBanking" >

    
    <TextView android:id="@+id/bankSelect"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
        	  android:text="Select a Bank"
        	  android:textSize="20sp"
        	  android:layout_above="@+id/bankOptions"
        	  android:layout_centerHorizontal="true"/>
    
    <Spinner android:id="@+id/bankOptions"
        	 android:layout_width="match_parent"
        	 android:layout_height="wrap_content"
        	 android:layout_centerInParent="true"
        	 android:prompt="@string/spinner"
        	 android:layout_marginRight="10dp"
        	 android:layout_marginLeft="10dp"/>
    
    <CheckBox android:id="@+id/saveOption"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
        	  android:text="@string/checkbox"
        	  android:layout_above="@+id/submitButton"
        	  android:layout_centerHorizontal="true"
        	  android:checked="true"/>
    
    <Button android:id="@+id/submitButton"
            	android:layout_width="match_parent"
            	android:layout_height="50dp"
            	android:text="@string/pay"
            	android:textColor="@android:color/white"
            	android:textSize="20sp"
            	android:layout_alignParentBottom="true"
  				/>

</RelativeLayout>
