<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <RelativeLayout android:id="@+id/centralLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>

        <RelativeLayout
            android:id="@+id/signUpLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="invisible">

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#FF0000"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:layout_above="@+id/username"/>

            <EditText android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="20dp"
                android:layout_centerInParent="true"
                android:hint="@string/Email"
                android:text="tester@gmail.com"/>

            <EditText android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="20dp"
                android:layout_below="@+id/username"
                android:hint="@string/mobilenum"
                android:inputType="number|none"
                android:text="7775432991"/>

            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="20dp"
                android:layout_below="@+id/mobile"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:text="asdQWE#123"/>

            <Button android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:text="@string/SignUp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>